crates/backyard-lexer/tests/snapshots/lexer__square_bracket.snap
---
source: crates/backyard-lexer/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
- token_type: Variable
  value:
    - 97
  line: 1
  column: 0
  offset: 0
- token_type: LeftSquareBracket
  value:
    - 91
  line: 1
  column: 2
  offset: 2
- token_type: Number
  value:
    - 49
  line: 1
  column: 3
  offset: 3
- token_type: Comma
  value:
    - 44
  line: 1
  column: 4
  offset: 4
- token_type: Number
  value:
    - 50
  line: 1
  column: 6
  offset: 6
- token_type: Comma
  value:
    - 44
  line: 1
  column: 7
  offset: 7
- token_type: Number
  value:
    - 51
  line: 1
  column: 9
  offset: 9
- token_type: RightSquareBracket
  value:
    - 93
  line: 1
  column: 10
  offset: 10
- token_type: Semicolon
  value:
    - 59
  line: 1
  column: 11
  offset: 11
