crates/backyard-lexer/tests/snapshots/lexer__tilde.snap
---
source: crates/backyard-lexer/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
- token_type: Variable
  value:
    - 97
  line: 1
  column: 0
  offset: 0
- token_type: Assignment
  value:
    - 61
  line: 1
  column: 3
  offset: 3
- token_type: BooleanNegate
  value:
    - 126
  line: 1
  column: 5
  offset: 5
- token_type: "False"
  value:
    - 102
    - 97
    - 108
    - 115
    - 101
  line: 1
  column: 6
  offset: 6
- token_type: Semicolon
  value:
    - 59
  line: 1
  column: 11
  offset: 11
