crates/backyard-lexer/tests/snapshots/lexer__type_test.snap
---
source: crates/backyard-lexer/tests/lexer.rs
expression: tokens
snapshot_kind: text
---
- token_type: Type
  value:
    - 105
    - 110
    - 116
  line: 1
  column: 0
  offset: 0
